Fixed Bug with overflow

--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@ body {
   background: -webkit-linear-gradient(to left, #8f94fb, #4e54c8);  
   width: 100%;
   height:100vh;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 .buttons-container{
